# nonebot-plugin-l4d2-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
left4dead2/addons/sourcemod/plugins/: Lybot-bridge.smx
left4dead2/addons/sourcemod/scripting/: Lybot-bridge.sp
left4dead2/addons/sourcemod/scripting/include/: lybot.inc
left4dead2/cfg/sourcemod/: lybot_bridge.cfg
nonebot_plugin_l4d2_bot/: __init__.py  config.py  connection.py  forwarder.py  http_server.py  protocol.py  ws_server.py
